--- a/email_generator.ipynb
+++ b/email_generator.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "llm = ChatGroq(\n",
     "    temperature=0, \n",
-    "    groq_api_key='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', \n",
+    "    groq_api_key='<keep your api key>', \n",
     "    model_name=\"llama-3.1-70b-versatile\"\n",
     ")\n",
     "response = llm.invoke(\"The first person to land on sun was ...\")\n",
